add view all button at the bottom of services and news section + display according to viewport size

--- a/index.html
+++ b/index.html
@@ -369,8 +369,8 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="heading">
-                            <h2 class="title">Our Services</h2>
-                            <h4 class="link"><a href="#">View All <i class="fas fa-arrow-right"></i></a></h4>
+                            <h2 class="section-title">Our Services</h2>
+                            <h4 class="section-link"><a href="#">View All <i class="fas fa-arrow-right"></i></a></h4>
                         </div>                        
                     </div>                    
                 </div>
@@ -400,7 +400,6 @@
                         </a> 
                     </div>
                 </div>
-
                 <div class="row">
                     <div class="col-12 col-md-6 col-xl-3">
                         <a class="card card-services">
@@ -434,6 +433,13 @@
                             <span class="btn btn-regular" href="#">Read more</span>                            
                         </a>     
                     </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="footing">
+                            <h4 class="section-link"><a href="#">View All <i class="fas fa-arrow-right"></i></a></h4>
+                        </div>                        
+                    </div>                    
                 </div>
             </div>
             <div class="carousel">
@@ -523,8 +529,8 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="heading">
-                            <h3 class="title">Latest News</h3>
-                            <h4 class="link"><a href="#">View All <i class="fas fa-arrow-right"></i></a></h4>
+                            <h3 class="section-title">Latest News</h3>
+                            <h4 class="section-link"><a href="#">View All <i class="fas fa-arrow-right"></i></a></h4>
                         </div>                        
                     </div>                    
                 </div>
@@ -589,6 +595,13 @@
                             </div>    
                         </a>
                     </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="footing">
+                            <h4 class="section-link"><a href="#">View All <i class="fas fa-arrow-right"></i></a></h4>
+                        </div>                        
+                    </div>                    
                 </div>
             </div>
         </div>
