move sitemap element outside the paragraph to prevent wrapping

--- a/index.html
+++ b/index.html
@@ -761,9 +761,10 @@
                 <div class="bottom-bar">
                     <div class="copyright">
                         <p>
-                            &copy; Copyright Netmatters 2023. All rights reserved. -
-                            <a href="#">Sitemap</a>
+                            &copy; Copyright Netmatters 2023. <br> All rights reserved.                             
                         </p>
+                        <span> - </span>
+                        <a href="#">Sitemap</a>
                     </div>
                     <div class="social">
                         <a href="#"><i class="fa fa-facebook"></i></a>
