--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>Netmatters Rebuild by Mark Jason Acab</title>
+        <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1">   
         <meta charset="utf-8">     
         <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
