--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
                                 </div>
                             </div>
 
-                            <a href="#" class="btn btn-welcome btn-regular">
+                            <a href="#" class="btn btn-subscribe btn-regular">
                                 Subscribe
                             </a>
 
