apply new custom checkbox input

--- a/index.html
+++ b/index.html
@@ -670,6 +670,7 @@
                             <div class="checkbox-field">
                                 <div class="element">
                                     <input type="checkbox" id="opt-in" name="opt-in" class="opt-in">
+                                    <label for="opt-in"></label>
                                 </div>
                                 <div class="description">
                                     <label for="opt-in">Please tick this box if you wish to receive marketing information from us. Please see our Privacy Policy for more information on how we keep your data safe.</label>
