move the classes to parent li element

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                     <nav class="row">
                         <div class="col-12">
                             <ul class="nav">
-                                <li class="nav__item">
-                                    <a href="#" class="software">                            
+                                <li class="nav__item software">
+                                    <a href="#" class="">                            
                                         <i class="fas fa-th"></i><br>
                                         <small>Bespoke</small><br>
                                         Software
@@ -101,8 +101,8 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li class="nav__item">
-                                    <a href="#" class="support">                            
+                                <li class="nav__item support">
+                                    <a href="#" class="">                            
                                         <i class="fa fa-tv"></i><br>
                                         <small>IT</small><br>
                                         Support
@@ -135,8 +135,8 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li class="nav__item">
-                                    <a href="#" class="marketing">
+                                <li class="nav__item marketing">
+                                    <a href="#" class="">
                                         <i class="fas fa-signal"></i><br>
                                         <small>Digital</small><br>
                                         Marketing
@@ -169,8 +169,8 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li class="nav__item">
-                                    <a href="#" class="services">                            
+                                <li class="nav__item services">
+                                    <a href="#" class="">                            
                                         <i class="fas fa-phone-alt"></i><br>
                                         <small>Telecoms</small><br>
                                         Services
@@ -203,8 +203,8 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li class="nav__item">
-                                    <a href="#" class="design">                            
+                                <li class="nav__item design">
+                                    <a href="#" class="">                            
                                         <i class="fas fa-code"></i><br>
                                         <small>Web</small><br>
                                         Design
@@ -237,8 +237,8 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li class="nav__item">
-                                    <a href="#" class="security">                            
+                                <li class="nav__item security">
+                                    <a href="#" class="">                            
                                         <i class="fas fa-shield-alt"></i><br>
                                         <small>Cyber</small><br>
                                         Security
@@ -271,8 +271,8 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li class="nav__item">
-                                    <a href="#" class="course">                            
+                                <li class="nav__item course">
+                                    <a href="#" class="">                            
                                         <i class="fas fa-graduation-cap"></i><br>
                                         <small>Developer</small><br>
                                         Course
