--- a/index.html
+++ b/index.html
@@ -777,5 +777,8 @@
                 </div>             
             </div>
         </div>
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="js/navigation.js"></script>
     </body>
 </html>
