--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta charset="utf-8">     
         <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css" rel="stylesheet" />
         <script src="https://kit.fontawesome.com/efff71aefd.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/application.css">
     </head>
@@ -324,8 +325,8 @@
             </header>         
 
             <!-- Slideshow -->
-            <div class="banner">            
-                <div class="slideshow">
+            <div class="banner slider">            
+                <div class="slide-item">
                     <div class="container">
                         <div class="row">
                             <div class="col-12">
@@ -343,24 +344,48 @@
                                 </div>
                             </div>                        
                         </div>
+                    </div>
+                </div>
+                <div class="slide-item">
+                    <div class="container">
                         <div class="row">
                             <div class="col-12">
-                                <div class="slideshow-buttons">
-                                    <ul class="dots">
-                                        <li class="dot active"><span></span></li>
-                                        <li class="dot"><span></span></li>
-                                        <li class="dot"><span></span></li>                
-                                        <li class="dot"><span></span></li>
-                                        <li class="dot"><span></span></li>
-                                        <li class="dot"><span></span></li>
-                                        <li class="dot"><span></span></li>
-                                    </ul>
+                                <div class="slide-text">
+                                    <h1>
+                                        The East Of England's Leading Technology Company
+                                    </h1>
+                                    <p>
+                                        Performance-driven digital and technology services <br>
+                                        with complete transparency.
+                                    </p>                    
+                                    <a href="#" class="btn btn-software">
+                                        Contact Us <i class="fas fa-arrow-right"></i>
+                                    </a>
                                 </div>
-                            </div>                          
+                            </div>                        
                         </div>
                     </div>
                 </div>
-        
+                <div class="slide-item">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="slide-text">
+                                    <h1>
+                                        The East Of England's Leading Technology Company
+                                    </h1>
+                                    <p>
+                                        Performance-driven digital and technology services <br>
+                                        with complete transparency.
+                                    </p>                    
+                                    <a href="#" class="btn btn-software">
+                                        Contact Us <i class="fas fa-arrow-right"></i>
+                                    </a>
+                                </div>
+                            </div>                        
+                        </div>                        
+                    </div>
+                </div>        
             </div>
 
             <!-- Services -->
@@ -955,7 +980,9 @@
 
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
         <script src="js/navigation.js"></script>
         <script src="js/sidebar.js"></script>
+        <script src="js/slideshow.js"></script>
     </body>
 </html>
