add banner slider  items + partner slider class

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
                                         <span class="hamburger">
                                             <b class="srt">Toggle</b>
                                         </span>
-                                    </a>                 
+                                    </a>       
+                                              
                                 </div>
                             </div>
                         </div>
@@ -352,14 +353,14 @@
                             <div class="col-12">
                                 <div class="slide-text">
                                     <h1>
-                                        The East Of England's Leading Technology Company
+                                        Bespoke Software
                                     </h1>
                                     <p>
-                                        Performance-driven digital and technology services <br>
-                                        with complete transparency.
+                                        Bring your business together with <br/>
+                                        solutions that grow with you
                                     </p>                    
                                     <a href="#" class="btn btn-software">
-                                        Contact Us <i class="fas fa-arrow-right"></i>
+                                        Find Out More <i class="fas fa-arrow-right"></i>
                                     </a>
                                 </div>
                             </div>                        
@@ -372,20 +373,100 @@
                             <div class="col-12">
                                 <div class="slide-text">
                                     <h1>
-                                        The East Of England's Leading Technology Company
+                                        IT Support
                                     </h1>
                                     <p>
-                                        Performance-driven digital and technology services <br>
-                                        with complete transparency.
+                                        Fast and cost-effective IT support <br>
+                                        services for your business
                                     </p>                    
-                                    <a href="#" class="btn btn-software">
-                                        Contact Us <i class="fas fa-arrow-right"></i>
+                                    <a href="#" class="btn btn-sec">
+                                        Find Out More<i class="fas fa-arrow-right"></i>
                                     </a>
                                 </div>
                             </div>                        
                         </div>                        
                     </div>
-                </div>        
+                </div>
+                <div class="slide-item">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="slide-text">
+                                    <h1>
+                                        Digital Marketing
+                                    </h1>
+                                    <p>
+                                        Generating your new business through <br>
+                                        results-driven marketing activities.
+                                    </p>                    
+                                    <a href="#" class="btn btn-marketing">
+                                        Find Out More<i class="fas fa-arrow-right"></i>
+                                    </a>
+                                </div>
+                            </div>                        
+                        </div>                        
+                    </div>
+                </div>
+                <div class="slide-item">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="slide-text">
+                                    <h1>
+                                        Telecoms Services
+                                    </h1>
+                                    <p>
+                                        A new approach to connectivity, see how <br>
+                                        we can help your business
+                                    </p>                    
+                                    <a href="#" class="btn btn-services">
+                                        Find Out More<i class="fas fa-arrow-right"></i>
+                                    </a>
+                                </div>
+                            </div>                        
+                        </div>                        
+                    </div>
+                </div>
+                <div class="slide-item">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="slide-text">
+                                    <h1>
+                                        Web Design
+                                    </h1>
+                                    <p>
+                                        For businesses looking to make a strong  <br>
+                                        and effective first impression.
+                                    </p>                    
+                                    <a href="#" class="btn btn-design">
+                                        Find Out More<i class="fas fa-arrow-right"></i>
+                                    </a>
+                                </div>
+                            </div>                        
+                        </div>                        
+                    </div>
+                </div>
+                <div class="slide-item">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="slide-text">
+                                    <h1>
+                                        Cyber Security
+                                    </h1>
+                                    <p>
+                                        Keeping businesses and their customers <br>
+                                        sensitive information protected.
+                                    </p>                    
+                                    <a href="#" class="btn btn-security">
+                                        Find Out More<i class="fas fa-arrow-right"></i>
+                                    </a>
+                                </div>
+                            </div>                        
+                        </div>                        
+                    </div>
+                </div>
             </div>
 
             <!-- Services -->
@@ -468,7 +549,7 @@
                     </div>
                 </div>
                 <div class="carousel">
-                    <div class="partners-strip">
+                    <div class="partners-strip slider">
                         <div class="item">
                             <img src="images/google-partner.jpg" alt="Google Partner">
                         </div>
@@ -980,9 +1061,9 @@
 
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>        
+        <script src="js/slideshow.js"></script>
         <script src="js/navigation.js"></script>
         <script src="js/sidebar.js"></script>
-        <script src="js/slideshow.js"></script>
     </body>
 </html>
